204-agw-ent-eliciations/k8s/mcp-github.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp-github
  namespace: agentgateway-system
spec:
  parentRefs:
    - name: agentgateway-proxy
      namespace: agentgateway-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /mcp-github
      filters:
        - type: CORS
          cors:
            allowHeaders:
              - "*"
            allowMethods:
              - "*"
            allowOrigins:
              - "http://localhost:8080"
              - "http://localhost:6274"
              - "http://127.0.0.1:6274"
      backendRefs:
        - name: github-mcp-backend
          group: agentgateway.dev
          kind: AgentgatewayBackend
